Modified add task method